@@ -1,3 +1,4 @@
+(ENHANCE) Made sn_error_dialog use TtkDialog::MessageBox
 (INTERNAL) Port sn_wait_dialog to use sn_ttk_buttons
 (ENHANCE) Port the "About" dialog to Ttk
 (BUGFIX) Forgot that someone may want to resize the "Abbreviations" dialog
